# template-base

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.juggler
components/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/app/: app.cc  app.h
main/board/common/: activity_callback.h  battery_gauge.h  board.cc  board.h  board_devices.h  board_gpio.h  button.cc  button.h  buzzer.cc  buzzer.h  display.cc  display.h  epaper_display.cc  epaper_display.h  gpio_isr_service_hint.h  i2c_device.h  imu_device.h  led.cc  led.h  low_power_controllable.h  microphone.h  sd_card.h  touch.h  ui_orientation.h
main/board/common/devices/: adc_battery.cc  adc_battery.h  gpio_button.cc  gpio_button.h  gpio_buzzer.cc  gpio_buzzer.h  gpio_display.cc  gpio_display.h  gpio_led.cc  gpio_led.h
main/board/common/interfaces/: battery.h  button.h  buzzer.h  display.h  environment_sensor.h  imu.h  led.h  microphone.h  power_managed.h  rtc.h  storage.h  touch.h
main/board/juggler/: config.h  juggler.cpp
main/board/juggler/devices/: README.md
main/board/new_board/: config.h  new_board.cpp
main/board/new_board/devices/: README.md
main/hal/: hal.cpp  hal.h
